--- a/JiaoBaoYun-hb/html/quan/zone_main.html
+++ b/JiaoBaoYun-hb/html/quan/zone_main.html
@@ -22,68 +22,60 @@
 			<div id="random_icon">
 				<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left common-color-white"></a>
 
-				<a id="leave" style="visibility:hidden" class="mui-icon iconfont icon-jiujiajingicon02-copy mui-pull-right""></a>
-				<a id="pub-dynamic" style="visibility:hidden" class="mui-icon iconfont icon-fabu mui-pull-right mui-plus-visible" >&nbsp&nbsp;</a>
+				<a id="leave" style="visibility:hidden;" class="mui-icon iconfont icon-jiujiajingicon02-copy mui-pull-right"></a>
+				<a id="pub-dynamic " style="visibility:hidden;" class="mui-icon iconfont icon-fabu mui-pull-right mui-plus-visible ">&nbsp;&nbsp;</a>
 			</div>
 		</header>
 
-		<div class="mui-content"></div>
-	</body>
-
-	<script type="text/javascript">
-		mui.init({
-
-		})
-		 //重写系统返回方法
+		<div class="mui-content "></div>
+		<script type="text/javascript ">
+			mui.init()
 			var old_back = mui.back;
 			mui.back = function() {
-			events.closeWaiting();
-			old_back()
+				events.closeWaiting();
+				old_back()
 			}
-		mui.plusReady(function() {
-
-			events.changeTopPocket();
-			var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid; //用户id
-			var data = plus.webview.currentWebview().data;
-			var NoReadCnt = plus.webview.currentWebview().NoReadCnt //未读条数
-			var flag = plus.webview.currentWebview().flag
-			var self = plus.webview.currentWebview();
-			var sub = plus.webview.create(
-				'zonep_sub.html',
-				'zonep_sub.html', 
-				{
-					top: (localStorage.getItem('StatusHeightNo') * 1 + 45) + 'px',
-					bottom: '0px'
-				},
-				{
-					data: data,
-					NoReadCnt: NoReadCnt
+			mui.plusReady(function() {
+				events.changeTopPocket();
+				var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid; //用户id
+				var data = plus.webview.currentWebview().data;
+				var NoReadCnt = plus.webview.currentWebview().NoReadCnt //未读条数
+				var flag = plus.webview.currentWebview().flag
+				var self = plus.webview.currentWebview();
+				var sub = plus.webview.create(
+					'zonep_sub.html',
+					'zonep_sub.html', {
+						top: (localStorage.getItem('StatusHeightNo') * 1 + 45) + 'px',
+						bottom: '0px'
+					}, {
+						data: data,
+						NoReadCnt: NoReadCnt
+					}
+				)
+				self.append(sub);
+				//			events.initSubPage('zonep_sub.html', { data: data, NoReadCnt: NoReadCnt });
+				console.log('我的空间获取的数据' + JSON.stringify(data))
+				if(data == personalUTID) {
+					document.getElementById('pub-dynamic').style.visibility = 'visible';
+					document.getElementById('leave').style.visibility = 'visible';
 				}
-			)
-			self.append(sub);
-//			events.initSubPage('zonep_sub.html', { data: data, NoReadCnt: NoReadCnt });
-			console.log('我的空间获取的数据' + JSON.stringify(data))
-			if(data == personalUTID) {
-				document.getElementById('pub-dynamic').style.visibility = 'visible';
-				document.getElementById('leave').style.visibility = 'visible';
-			}
-			if(flag == 0) {
-				document.getElementById('leave').style.visibility = 'visible';
-			}
-
-			//			var tempview =  plus.webview.getWebviewById('zonep_sub.html');
-			events.addTap('leave', function() {
-				events.openNewWindowWithData('../quan/leaveNew.html', data);
-				events.fireToPageNone('zonep_sub.html','hidePreImage')
+				if(flag == 0) {
+					document.getElementById('leave').style.visibility = 'visible';
+				}
+				events.addTap('leave', function() {
+					events.openNewWindowWithData('../quan/leaveNew.html', data);
+					events.fireToPageNone('zonep_sub.html', 'hidePreImage')
+				})
+				events.addTap('pub-dynamic', function() {
+					//判断是否是游客身份登录
+					if(events.judgeLoginMode(this)) {
+						return;
+					}
+					events.singleWebviewInPeriod(this,'../quan/pub-dynamic.html', 'jxq')
+					events.fireToPageNone('zonep_sub.html', 'hidePreImage')
+				})
 			})
-			events.addTap('pub-dynamic', function() {
-				//判断是否是游客身份登录
-				if (events.judgeLoginMode()) {return;}
-				var pubDynamic = document.getElementById("pub-dynamic")
-				events.openNewWindowWithData('../quan/pub-dynamic.html', 'jxq');
-				events.fireToPageNone('zonep_sub.html','hidePreImage')
-			})
-		})
-	</script>
+		</script>
+	</body>
 
 </html>
