--- a/JiaoBaoYun-hb/html/qiuzhi/expert-detail.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/expert-detail.html
@@ -141,18 +141,20 @@
 			mui('.mui-table-view').on('tap', '.mui-table-view-cell', function() {
 				console.log(this.id);
 				//判断是否是游客身份登录
-				if(events.judgeLoginMode()) {
+				if(events.judgeLoginMode(this)) {
 					return;
 				}
+				var webUrl;
 				if(this.id == 'AnswerLi') { //他的回答
-					events.openNewWindowWithData('qiuzhi-expertAllAnswer.html', ExpertsInfo);
+					webUrl='qiuzhi-expertAllAnswer.html';
 				} else if(this.id == 'AskLi') { //他的提问
-					events.openNewWindowWithData('expert-ask.html', ExpertsInfo);
+					webUrl='expert-ask.html';
 				} else if(this.id == 'CommentLi') { //他的评论
-					events.openNewWindowWithData('qiuzhi-expertAllComment.html', ExpertsInfo);
+					webUrl="qiuzhi-expertAllComment.html";
 				} else { //邀请他的回答
-					events.openNewWindowWithData('qiuzhi-inviteAnswer.html', ExpertsInfo);
+					webUrl="qiuzhi-inviteAnswer.html";
 				}
+				events.singleWebviewInPeriod(this,webUrl,ExpertsInfo);
 			})
 			window.addEventListener('refresh_expertdetail', function(data) {
 				getExpertsInfo(ExpertsInfo.UserId);
@@ -161,10 +163,11 @@
 				var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid; //当前登录账号utid
 				if(ExpertsInfo.UserId == personalUTID) {
 					//判断是否是游客身份登录
-					if(events.judgeLoginMode()) {
+					if(events.judgeLoginMode(this)) {
 						return;
 					}
-					events.openNewWindowWithData('modifyExpertNote.html', ExpertsInfo.UserNote);
+					events.singleWebviewInPeriod(this,'modifyExpertNote.html', ExpertsInfo.UserNote);
+//					events.openNewWindowWithData('modifyExpertNote.html', ExpertsInfo.UserNote);
 				}
 
 			})
@@ -176,44 +179,23 @@
 
 			})
 			events.addTap('FocusMan', function() {
-				console.log('他关注的人');
-				mui.openWindow({
-					url: 'AttentionPersons.html',
-					id: 'AttentionPersons.html',
-					styles: {
-						top: '0px', //设置距离顶部的距离
-						bottom: '0px'
-					},
-					extras: {
+				this.disabled=true;
+				events.singleWebviewInPeriod(this,"AttentionPersons.html",{
 						expertInfo: ExpertsInfo,
 						type: 0
-					},
-					createNew: true,
-
-				});
+					})
+				console.log('他关注的人');
 			})
 			events.addTap('IsFocusedMan', function() {
 				//判断是否是游客身份登录
-				if(events.judgeLoginMode()) {
+				if(events.judgeLoginMode(this)) {
 					return;
 				}
-				console.log('专家信息：' + JSON.stringify(ExpertsInfo))
-				mui.openWindow({
-					url: 'AttentionPersons.html',
-					id: 'AttentionPersons.html',
-					styles: {
-						top: '0px', //设置距离顶部的距离
-						bottom: '0px'
-					},
-					extras: {
+				events.singleWebviewInPeriod(this,"AttentionPersons.html",{
 						expertInfo: ExpertsInfo,
 						type: 1
-					},
-					createNew: true,
-
 				});
-				//				events.openNewWindowWithData('AttentionPersons.html', { expertInfo: ExpertsInfo, type: 1 });
-				console.log('关注他的人');
+				console.log('专家信息：' + JSON.stringify(ExpertsInfo))
 			})
 			events.addTap('focusBtn', function() {
 				if(!events.getUtid()) {
@@ -243,15 +225,17 @@
 
 			events.addTap('expertImg', function() {
 				//判断是否是游客身份登录
-				if(events.judgeLoginMode()) {
+				if(events.judgeLoginMode(this)) {
 					return;
 				}
+				this.disabled=false;
 			})
 			events.addTap('ExpertChannels', function() {
 				//判断是否是游客身份登录
-				if(events.judgeLoginMode()) {
+				if(events.judgeLoginMode(this)) {
 					return;
 				}
+				this.disabled=false;
 			})
 			if(utid == 0 && utid == ExpertsInfo.UserId) {
 				nodes.expertImg.src = updateHeadImg('', 2);
