--- a/JiaoBaoYun-hb/html/cloud/app_notes_main.html
+++ b/JiaoBaoYun-hb/html/cloud/app_notes_main.html
@@ -10,9 +10,11 @@
 		<meta name="author" content="莫尚霖,email:444811716@qq.com" />
 		<meta name="description" content="笔记" />
 		<link rel="stylesheet" href="../../css/mui.min.css">
+		<link rel="stylesheet" href="../../css/iconfont/iconfont.css" />
 		<link rel="stylesheet" href="../../css/utils/common.css" />
 		<link rel="stylesheet" href="../../css/utils/preview.css" />
 		<link rel="stylesheet" href="../../css/utils/pullToRefresh.css" />
+		<link rel="stylesheet" href="../../css/utils/audiopopover.css" />
 
 		<style>
 			body,
@@ -154,7 +156,7 @@
 			}
 
 			.mui-backdrop {
-				background-color: black;
+				background-color: transparent;
 			}
 		</style>
 	</head>
@@ -188,6 +190,23 @@
 				您的浏览器不支持 video 标签。
 			</video>
 		</div>
+		<div id="audioPopover" class="mui-popover">
+			<div id="audio_show" class="audio-show-popover">
+				<span id="audio_icon" class="mui-icon mui-icon-mic audio-icon"></span>
+				<canvas id="audio_canvas" class="audio-canvas"></canvas>
+				<span id="audio_close" class="mui-icon iconfont icon-guanbi"></span>
+				<div id="audio_time" class="audio-time">00:00</div>
+				<div id="audio_control" class="audio-control">
+					<div id="audio_play" class="audio-control-background audio-control-play">
+						<div></div>
+					</div>
+					<div id="audio_pause" class="audio-control-background audio-control-pause">
+						<div></div>
+						<div></div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</body>
 	<script src="../../js/mui.min.js"></script>
 	<script type="text/javascript" src="../../js/publicProtocol.js"></script>
@@ -198,7 +217,7 @@
 	<script type="text/javascript" src="../../js/mui.pullToRefresh.material.js"></script>
 	<script type="text/javascript" src="../../js/utils/playutil.js"></script>
 	<script type="text/javascript" src="../../js/utils/showvideoutil.js"></script>
-
+	<script type="text/javascript" src="../../js/utils/showaudio.js"></script>
 	<script type="text/javascript">
 		var markDate = ''; //记录日期
 		var today = ''; //记录今天日期
@@ -222,8 +241,7 @@
 			var wd = events.showWaiting();
 			initData();
 			initControl();
-			initListener();
-			//请求数据
+			initListener(); //请求数据
 			requestData(1, wd);
 		});
 
@@ -279,6 +297,15 @@
 				var ids = this.id.split('_');
 				ShowVideoUtil.showVideo(document.getElementById("video"), 'videoPopover', notes.noteValue[ids[2]].EncAddr, notes.noteValue[ids[2]].EncImgAddr);
 			});
+
+			//播放音频
+			mui('#list').on('tap', '.audio-button', function() {
+				var ids = this.id.split('_');
+				ShowAudioUtil.initAudio({
+					fpath: notes.noteValue[ids[2]].EncAddr,
+					time: notes.noteValue[ids[2]].EncLen
+				});
+			});
 		}
 
 		/**
@@ -333,8 +360,16 @@
 				}
 			});
 
-			//初始化播放器
+			//初始化视频播放器
 			ShowVideoUtil.initVideo(document.getElementById("video"));
+			ShowAudioUtil.initAudioPopover({
+				show: document.getElementById("audio_show"),
+				icon: document.getElementById("audio_icon"),
+				canvas: document.getElementById("audio_canvas"),
+				play: document.getElementById("audio_play"),
+				pause: document.getElementById("audio_pause"),
+				time: document.getElementById("audio_time")
+			});
 		}
 
 		//请求数据
@@ -389,7 +424,7 @@
 		 * @param {Object} item
 		 */
 		function createNotes(data) {
-			console.log('createNotes ' + JSON.stringify(data));
+			//console.log('createNotes ' + JSON.stringify(data));
 			notes.noteKey.push(data.TabId);
 			notes.noteValue[data.TabId] = data;
 			var date = data.PublishDate.split(' '); //发布的日期和时间
@@ -429,7 +464,7 @@
 			var marginBottom = Math.floor((document.getElementById(dateItem).offsetWidth * 0.8 - 32) * 0.02);
 			var marginRight;
 
-			if(data.EncType == 1) { //附件类型,1图片2音视频3仅文字
+			if(data.EncType == 1) { //附件类型,1图片2视频3仅文字4音频
 				var imageArray = data.EncAddr.split('|');
 				var thumbArray = data.EncImgAddr.split('|');
 
@@ -461,6 +496,16 @@
 								<img id="video_thumb_' + data.TabId + '" class="video-thumb" src="' + data.EncImgAddr + '" onload="videoThumbLoad(this);"  onerror="videoThumbError(this);">\
 							</div>';
 				html_media = html_0;
+			} else if(data.EncType == 4) { //音频
+				var audioTime = playutil.audioTimePercent(data.EncLen);
+				html_media = '<div class="audio-area">\
+								<button id="audio_play_' + data.TabId + '" type="button" class="mui-btn mui-btn-grey mui-btn-outlined audio-button" style="width: ' + audioTime + '%;">\
+									<div class="audio-triangle audio-triangle-out"></div>\
+									<div class="audio-triangle audio-triangle-in"></div>\
+									<div class="audio-time">' + data.EncLen + '\'\'</div>\
+									<span class="mui-icon iconfont icon-yuyin4 audio-icon"></span>\
+								</button>\
+							</div>';
 			}
 
 			var element = document.createElement('div');
