所有发布去掉替换换行

--- a/JiaoBaoYun-hb/html/homework/doHomework-stu.html
+++ b/JiaoBaoYun-hb/html/homework/doHomework-stu.html
@@ -288,7 +288,7 @@
 					mui.toast('请输入作业内容');
 					return;
 				} else {
-					tempText = replaceAllBL(tempText);
+//					tempText = replaceAllBL(tempText);
 				}
 				for(var i in CloudFileUtil.files) {
 					CloudFileUtil.files[i].order = i;
