--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-newQ.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-newQ.html
@@ -224,7 +224,7 @@
 					mui.toast('标题不能超过30字');
 					return;
 				} else {
-					tempText = replaceAllBL(tempText)
+//					tempText = replaceAllBL(tempText)
 				}
 				tempText = Trim(askNote.value);
 				console.log('textView.value===' + tempText)
@@ -235,7 +235,7 @@
 					mui.toast('内容不能超过2000字');
 					return;
 				} else {
-					tempText = replaceAllBL(tempText)
+//					tempText = replaceAllBL(tempText)
 				}
 				//				var checkbox = document.getElementById("checkbox")
 				//				var isAnonym = 0;
