--- a/JiaoBaoYun-hb/html/quan/leave-reply.html
+++ b/JiaoBaoYun-hb/html/quan/leave-reply.html
@@ -59,7 +59,7 @@
 					mui.toast('不能超过300字');
 					return;
 				} else {
-					tempText = replaceAllBL(tempText);
+//					tempText = replaceAllBL(tempText);
 				}
 				httpData.msgContent = tempText;
 				console.log('httpData === ' + JSON.stringify(httpData));
