--- a/JiaoBaoYun-hb/html/quan/pub-dynamic.html
+++ b/JiaoBaoYun-hb/html/quan/pub-dynamic.html
@@ -230,7 +230,7 @@
 				console.log(tempInfo.uarea.acode)
 
 				var textView = document.getElementById('input-content');
-				var tempText = Trim(textView.value);
+				var tempText = textView.value;
 				
 				if(!tempText || tempText == '') {
 					mui.toast('请输入内容');
