--- a/JiaoBaoYun-hb/html/qiuzhi/expert-detail.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/expert-detail.html
@@ -140,21 +140,24 @@
 
 			mui('.mui-table-view').on('tap', '.mui-table-view-cell', function() {
 				console.log(this.id);
-				//判断是否是游客身份登录
-				if(events.judgeLoginMode(this)) {
-					return;
+				if(utid == 0 && utid == ExpertsInfo.UserId) {
+					//判断是否是游客身份登录
+					if(events.judgeLoginMode(this)) {
+						return;
+					}
 				}
+
 				var webUrl;
 				if(this.id == 'AnswerLi') { //他的回答
-					webUrl='qiuzhi-expertAllAnswer.html';
+					webUrl = 'qiuzhi-expertAllAnswer.html';
 				} else if(this.id == 'AskLi') { //他的提问
-					webUrl='expert-ask.html';
+					webUrl = 'expert-ask.html';
 				} else if(this.id == 'CommentLi') { //他的评论
-					webUrl="qiuzhi-expertAllComment.html";
+					webUrl = "qiuzhi-expertAllComment.html";
 				} else { //邀请他的回答
-					webUrl="qiuzhi-inviteAnswer.html";
+					webUrl = "qiuzhi-inviteAnswer.html";
 				}
-				events.singleWebviewInPeriod(this,webUrl,ExpertsInfo);
+				events.singleWebviewInPeriod(this, webUrl, ExpertsInfo);
 			})
 			window.addEventListener('refresh_expertdetail', function(data) {
 				getExpertsInfo(ExpertsInfo.UserId);
@@ -166,8 +169,8 @@
 					if(events.judgeLoginMode(this)) {
 						return;
 					}
-					events.singleWebviewInPeriod(this,'modifyExpertNote.html', ExpertsInfo.UserNote);
-//					events.openNewWindowWithData('modifyExpertNote.html', ExpertsInfo.UserNote);
+					events.singleWebviewInPeriod(this, 'modifyExpertNote.html', ExpertsInfo.UserNote);
+					//					events.openNewWindowWithData('modifyExpertNote.html', ExpertsInfo.UserNote);
 				}
 
 			})
@@ -179,11 +182,11 @@
 
 			})
 			events.addTap('FocusMan', function() {
-				this.disabled=true;
-				events.singleWebviewInPeriod(this,"AttentionPersons.html",{
-						expertInfo: ExpertsInfo,
-						type: 0
-					})
+				this.disabled = true;
+				events.singleWebviewInPeriod(this, "AttentionPersons.html", {
+					expertInfo: ExpertsInfo,
+					type: 0
+				})
 				console.log('他关注的人');
 			})
 			events.addTap('IsFocusedMan', function() {
@@ -191,9 +194,9 @@
 				if(events.judgeLoginMode(this)) {
 					return;
 				}
-				events.singleWebviewInPeriod(this,"AttentionPersons.html",{
-						expertInfo: ExpertsInfo,
-						type: 1
+				events.singleWebviewInPeriod(this, "AttentionPersons.html", {
+					expertInfo: ExpertsInfo,
+					type: 1
 				});
 				console.log('专家信息：' + JSON.stringify(ExpertsInfo))
 			})
@@ -228,14 +231,14 @@
 				if(events.judgeLoginMode(this)) {
 					return;
 				}
-				this.disabled=false;
+				this.disabled = false;
 			})
 			events.addTap('ExpertChannels', function() {
 				//判断是否是游客身份登录
 				if(events.judgeLoginMode(this)) {
 					return;
 				}
-				this.disabled=false;
+				this.disabled = false;
 			})
 			if(utid == 0 && utid == ExpertsInfo.UserId) {
 				nodes.expertImg.src = updateHeadImg('', 2);
@@ -249,7 +252,7 @@
 				nodes.titleFlag4.innerHTML = '我的评论';
 				var focusequestion = window.myStorage.getItem(window.storageKeyName.FOCUSEQUESTION);
 				var focuseperson = window.myStorage.getItem(window.storageKeyName.FOCUSEPERSEN);
-				console.log('focusequestion=' + focusequestion+','+JSON.stringify(focusequestion));
+				console.log('focusequestion=' + focusequestion + ',' + JSON.stringify(focusequestion));
 				nodes.FocusAskNum.innerHTML = focusequestion ? focusequestion.length : 0;
 				nodes.FocusManNum.innerHTML = focuseperson ? focuseperson.length : 0;
 				return;
