--- a/JiaoBaoYun-hb/html/cloud/app_notes_create.html
+++ b/JiaoBaoYun-hb/html/cloud/app_notes_create.html
@@ -327,6 +327,7 @@
 									var fileName = filePath[filePath.length - 1];
 									if(audioName == fileName) {
 										multiMedia.data.AudioArray[j].domain = QNUptoken.Data[i].Domain + QNUptoken.Data[i].Key;
+										multiMedia.data.AudioArray[j].thumb = QNUptoken.Data[i].OtherKey[configure.thumbKey[i]];
 									}
 								}
 							}
@@ -438,6 +439,7 @@
 									pathList.push(multiMedia.data.VideoArray[num].thumb);
 								} else if(multiMedia.data.AudioArray.length !== 0) { //音频
 									pathList.push(multiMedia.data.AudioArray[num].domain);
+									pathList.push(multiMedia.data.AudioArray[num].thumb);
 								}
 
 								//								if(persistentId.length < 3) { //前三张
@@ -468,6 +470,7 @@
 									} else if(multiMedia.data.AudioArray.length !== 0) { //音频
 										for(var j = 0; j < multiMedia.data.AudioArray.length; j++) {
 											encAddr.push(multiMedia.data.AudioArray[j].domain);
+											encImg.push(multiMedia.data.AudioArray[j].thumb);
 											encLen.push(multiMedia.data.AudioArray[j].time);
 										}
 										type = '4';
@@ -501,7 +504,7 @@
 									console.log('上传任务请求已经建立:|id:' + upload.__UUID__ + '|uploadState:' + upload.state);
 									break;
 								case 3: //上传任务提交数据
-									console.log('上传任务状态监听:|id:' + upload.__UUID__ + '|uploadedSize:' + upload.uploadedSize + '|totalSize:' + upload.totalSize + '|uploadState:' + upload.state);
+									//console.log('上传任务状态监听:|id:' + upload.__UUID__ + '|uploadedSize:' + upload.uploadedSize + '|totalSize:' + upload.totalSize + '|uploadState:' + upload.state);
 									break;
 								case 4: //上传任务已完成
 									console.log('上传任务已完成:|id:' + upload.__UUID__ + '|uploadState:' + upload.state);
