--- a/JiaoBaoYun-hb/html/mine/setting.html
+++ b/JiaoBaoYun-hb/html/mine/setting.html
@@ -182,17 +182,31 @@
 				});
 
 				function loadURL() {
-					// NewViewController为应用内创建的原生的ViewController类名,所调用页面的内容需要在原生代码中完成
-					var newVCobj = plus.ios.newObject("NewViewController");
-					var UIApplicationClass = plus.ios.importClass("UIApplication");
-					var UIAppObj = UIApplicationClass.sharedApplication();
-					var del = plus.ios.invoke(UIAppObj, "delegate");
-					// 如果当前应用delegate对象包含UIWindow对象并且变量名命名为“window”可以这么写，
-					// 否则需要根据实际代码情况修改
-					// 应用的delegate对象也可以添加一个返回UIViewController的方法
-					var appWindowObj = plus.ios.invoke(del, "window");
-					var appRootController = plus.ios.invoke(appWindowObj, "rootViewController");
-					plus.ios.invoke(appRootController, "presentViewController:animated:completion:", newVCobj, "YES", null);
+					var AVFoundation = plus.ios.importClass("AVFoundation");
+//					NSURL *url = [NSURL fileURLWithPath:path];
+//					NSURL *url = [NSURL URLWithString:@"http://yinyueshiting.baidu.com/data2/music/121859548/1201250291406001661128.mp3?xcode=296f7746a300c412bedf6f0db640bd7aaf56297aed761ad4"];  
+					var tempURL = plus.ios.import('NSURL');
+//					tempURL.URLWithString('http://qn-kfpb.jiaobaowang.net/jxq/Note/1494295717620528.amr');
+//  					AVAudioPlayer *player = [[AVAudioPlayer alloc]initWithContentsOfURL:url error:nil];
+    					var AVAudioPlayer = plus.ios.newObject('AVAudioPlayer',tempURL.URLWithString('http://qn-kfpb.jiaobaowang.net/jxq/Note/1494295717620528.amr'));
+//  					var AVAudioPlayer = new AVAudioPlayer1();
+//  					var tempAV = AVAudioPlayer.initWithURL(tempURL.URLWithString('http://qn-kfpb.jiaobaowang.net/jxq/Note/1494295717620528.amr'));
+//  					self.audioPlayer = player;
+    					
+//  					[self.audioPlayer play];
+    					AVAudioPlayer.play;
+					
+//					// NewViewController为应用内创建的原生的ViewController类名,所调用页面的内容需要在原生代码中完成
+//					var newVCobj = plus.ios.newObject("NewViewController");
+//					var UIApplicationClass = plus.ios.importClass("UIApplication");
+//					var UIAppObj = UIApplicationClass.sharedApplication();
+//					var del = plus.ios.invoke(UIAppObj, "delegate");
+//					// 如果当前应用delegate对象包含UIWindow对象并且变量名命名为“window”可以这么写，
+//					// 否则需要根据实际代码情况修改
+//					// 应用的delegate对象也可以添加一个返回UIViewController的方法
+//					var appWindowObj = plus.ios.invoke(del, "window");
+//					var appRootController = plus.ios.invoke(appWindowObj, "rootViewController");
+//					plus.ios.invoke(appRootController, "presentViewController:animated:completion:", newVCobj, "YES", null);
 				}
 				//退出
 				events.addTap('quit', function() {
