--- a/JiaoBaoYun-hb/html/quan/class-dynamic.html
+++ b/JiaoBaoYun-hb/html/quan/class-dynamic.html
@@ -189,7 +189,7 @@
 					mui.toast('请输入内容');
 					return;
 				} else {
-//					tempText = replaceAllBL(tempText);
+					tempText = events.trim(tempText);
 				}
 				if(events.limitInput(tempText, 2000)) {
 					return;
