--- a/JiaoBaoYun-hb/html/cloud/app_notes_main.html
+++ b/JiaoBaoYun-hb/html/cloud/app_notes_main.html
@@ -205,6 +205,7 @@
 						<div></div>
 					</div>
 				</div>
+				<audio id="audio_audio" autoplay="autoplay" preload="auto"></audio>
 			</div>
 		</div>
 	</body>
@@ -368,7 +369,8 @@
 				canvas: document.getElementById("audio_canvas"),
 				play: document.getElementById("audio_play"),
 				pause: document.getElementById("audio_pause"),
-				time: document.getElementById("audio_time")
+				time: document.getElementById("audio_time"),
+				audio:document.getElementById("audio_audio")
 			});
 		}
 
