--- a/JiaoBaoYun-hb/html/mine/setting.html
+++ b/JiaoBaoYun-hb/html/mine/setting.html
@@ -182,19 +182,19 @@
 				});
 
 				function loadURL() {
-					var AVFoundation = plus.ios.importClass("AVFoundation");
+//					var AVFoundation = plus.ios.importClass("AVFoundation");
 //					NSURL *url = [NSURL fileURLWithPath:path];
 //					NSURL *url = [NSURL URLWithString:@"http://yinyueshiting.baidu.com/data2/music/121859548/1201250291406001661128.mp3?xcode=296f7746a300c412bedf6f0db640bd7aaf56297aed761ad4"];  
-					var tempURL = plus.ios.import('NSURL');
+//					var tempURL = plus.ios.import('NSURL');
 //					tempURL.URLWithString('http://qn-kfpb.jiaobaowang.net/jxq/Note/1494295717620528.amr');
 //  					AVAudioPlayer *player = [[AVAudioPlayer alloc]initWithContentsOfURL:url error:nil];
-    					var AVAudioPlayer = plus.ios.newObject('AVAudioPlayer',tempURL.URLWithString('http://qn-kfpb.jiaobaowang.net/jxq/Note/1494295717620528.amr'));
+//  					var AVAudioPlayer = plus.ios.newObject('AVAudioPlayer',tempURL.URLWithString('http://qn-kfpb.jiaobaowang.net/jxq/Note/1494295717620528.amr'));
 //  					var AVAudioPlayer = new AVAudioPlayer1();
 //  					var tempAV = AVAudioPlayer.initWithURL(tempURL.URLWithString('http://qn-kfpb.jiaobaowang.net/jxq/Note/1494295717620528.amr'));
 //  					self.audioPlayer = player;
     					
 //  					[self.audioPlayer play];
-    					AVAudioPlayer.play;
+//  					AVAudioPlayer.play;
 					
 //					// NewViewController为应用内创建的原生的ViewController类名,所调用页面的内容需要在原生代码中完成
 //					var newVCobj = plus.ios.newObject("NewViewController");
