--- a/JiaoBaoYun-hb/html/quan/pub-dynamic.html
+++ b/JiaoBaoYun-hb/html/quan/pub-dynamic.html
@@ -174,6 +174,10 @@
 					})
 				});
 			events.addTap('get_gallery', function() {
+				if(CloudFileUtil.files.length > 0 && CloudFileUtil.files[0].type != 1) {
+						mui.toast("只允许上传一种附件！");
+						return;
+					}
 				if(CloudFileUtil.files.length < 9) {
 					var picCount = 0; //上传图片计数
 					gallery.getMultiplePic(9 - CloudFileUtil.files.length, function(paths) { //回调函数
